trazendo endereco principal no carrinho user logado

--- a/src/main/resources/templates/carrinhoCompras.html
+++ b/src/main/resources/templates/carrinhoCompras.html
@@ -100,19 +100,24 @@
       <ul class="list-group mb-3" style="background-color: transparent; border: none !important;">
         <li class="list-group-item py-3" style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
           <div class="row g-3" >
-            <div class="col-8 col-md-9 col-lg-6" >
-              <small class="text-white" id="ruaLogado">teste</small> <br>
-              <small class="text-white" id="bairroLogado">zap</small> <br>
-              <small class="text-white" id="cep-cidadeLogado">oi</small> <br>
-              <button type="button" class="btn btn-outline-info mt-4" style="padding: 7px !important;" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"
-                     viewBox="0 0 16 16">
-                  <path
-                          d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
-                </svg>
-                Alterar endereço
-              </button>
-            </div>
+            <div class="col-8 col-md-9 col-lg-6" th:if="${cliente != null}">
+              <th:block th:each="endereco : ${cliente.enderecos}">
+                  <th:block th:if="${endereco.principal == true}">
+                      <small class="text-white" id="ruaLogado" th:text="${endereco.logradouro}">Endereço não disponível</small> <br>
+                      <small class="text-white" id="bairroLogado" th:text="${endereco.bairro}">Endereço não disponível</small> <br>
+                      <small class="text-white" id="cep-cidadeLogado" th:text="${endereco.cep}">Endereço não disponível</small> <br>
+                      <button type="button" class="btn btn-outline-info mt-4" style="padding: 7px !important;" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"
+                               viewBox="0 0 16 16">
+                              <path
+                                  d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
+                          </svg>
+                          Alterar endereço
+                      </button>
+                  </th:block>
+              </th:block>
+          </div>
+          
             <div class="col-4 col-md-3 col-lg-5">
               <div class="form-check d-flex align-items-center">
                 <input class="form-check-input me-3" data-valor="12.00" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
